# CHMC-Nested-Sampling

./: .gitignore  .gitmodules  CMakeLists-experimental.txt  CMakeLists.txt  README.md  isolikelihood_contour.p  main.cpp  notes.txt
app/: CMakeLists.txt  Gaussian.cpp  Gaussian.h  Likelihood.cpp  Likelihood.h  LikelihoodPlots.cpp  LikelihoodPlots.h  Phi4LFT.cpp  Phi4LFT.h  TopologicalTrap.h  phi4_anesthetic.py
app/likelihoods/: Eggbox.cpp  Eggbox.h  Gaussian.cpp  Gaussian.h  GaussianPrior.cpp  GaussianPrior.h  Phi4Likelihood.cpp  Phi4Likelihood.h  Rosenbrock.cpp  Rosenbrock.h  Shells.cpp  Shells.h  TopologicalTrap.cpp  TopologicalTrap.h  UniformPrior.cpp  UniformPrior.h
app/phi4/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  LFT.cpp  LFT.h  Phi4Likelihood.cpp  Phi4Likelihood.h  PosteriorAnalysis.cpp  PosteriorAnalysis.h  correlation_length.py
app/scripts/: chmc.py  correlation_length.py  diagnostics.py  diagonstics_livepoints.py  evidence_error.py  gaussian_check.py  hmc_visualisation.py  likelihood_plot.py  nestcheck_sandbox.py  phi4_anesthetic.py  rejection_diagnostics.py  speed_graphs.py
app/scripts/phi4/: posterior_analysis.py
app/tests/: CMakeLists.txt  EggboxTest.cpp  EggboxTest.h  GaussianTest.cpp  GaussianTest.h  ShellsTest.cpp
enzyme/: CMakeLists.txt  Likelihood.cpp  Likelihood.h  Rosenbrock.cpp  Rosenbrock.h
include/: CHMC.h  Clustering.h  ILikelihood.h  IParams.h  IPrior.h  ISampler.h  Logger.h  NestedSampler.h  Point.h  RejectionSampler.h  enzyme_test.h  types.h
include/CHMC/: Adapter.h  CHMC.h  Hamiltonian.h  LeapfrogIntegrator.h
likelihood/: CMakeLists.txt  Likelihood.cpp  Likelihood.h
report/bib/: references.bib
report/bibliography/: references.bib
report/main/: 10conclusion.tex  1introduction.tex  2bayesian_inference.tex  2nested_sampling.tex  3hamiltonian_monte_carlo.tex  3nested_sampling.tex  4constrained_hmc.tex  4hamiltonian_monte_carlo.tex  5constrained_hmc.tex  5parameter_adaption.tex  6lattice_field_theory.tex  6parameter_adaption.tex  7lattice_field_theory.tex  7results.tex  8performance.tex  8results.tex  9performance.tex  appendix.tex  background.tex  constrained_hmc.tex  introduction.tex  lattice_field_theory.tex  macros.tex  main_report.tex  nested_sampling.tex  parameter_adaption.tex
report/plan/: report_plan.aux  report_plan.bbl  report_plan.bcf  report_plan.blg  report_plan.out  report_plan.run.xml  report_plan.tex
results/: TopoTrap_dead-birth.txt  dim_bench.txt  phase_data_32.csv  phase_data_64.csv  polychord_phi4_speeds.txt  topotrap.mov
results/Phi4/: Phi4.mov  Phi4.stats
results/TopoTrap/: TopoTrap.stats
src/: CMakeLists.txt  Clustering.cpp  Logger.cpp  Logger.h  NestedSampler.cpp  RejectionSampler.cpp  enzyme_test.cpp
src/CHMC/: Adapter.cpp  CHMC.cpp  CHMC.h  CMakeLists.txt  Hamiltonian.cpp  Hamiltonian.h  Leapfrog.cpp  Leapfrog.h  LeapfrogIntegrator.cpp  LeapfrogIntegrator.h
test/: CMakeLists.txt  MockLikelihood.h  NestedSampler.cpp
test/CHMC/: CHMC.cpp  CMakeLists.txt  GaussianCHMC.cpp  Hamiltonian.cpp  LeapfrogIntegrator.cpp
test/mock/: MockCHMC.h  MockLikelihood.h  MockLogger.h  MockParams.h  MockPrior.h  MockSampler.h
